--- a/src/components/MainGame/ResultPage/GameOverText.module.css
+++ b/src/components/MainGame/ResultPage/GameOverText.module.css
@@ -11,6 +11,7 @@ margin: auto;
     font-size:clamp(1.8em, 4.5vw, 3.5em);
     text-transform: uppercase;
     font-weight: 700;
+    color: white;
 }
 @media (max-width:700px){
     .game-over-text{
