--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   font-family: 'Barlow Semi Condensed', sans-serif;
 
-  color-scheme: light dark;
+ 
 
 
   font-synthesis: none;
@@ -43,7 +43,7 @@ body ,html{
   align-items: center;
   background:linear-gradient(to bottom,var(--Radial-Gradient1),var(--Radial-Gradient2)) ;
   padding: 1rem;
-  gap: 5rem;
+  gap: 4rem;
 }
 
 
